--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,15 @@
     <description>micro-Service-Blog</description>
     <properties>
         <java.version>17</java.version>
+
+            <sonar.coverage.jacoco.xmlReportPaths>
+                ../app-it/target/site/jacoco-aggregate/jacoco.xml
+            </sonar.coverage.jacoco.xmlReportPaths>
+
+            <sonar.organization>laila</sonar.organization>
+            <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
+
     </properties>
     <dependencies>
 
@@ -73,6 +82,21 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.7</version>
+                <executions>
+                    <execution>
+                        <id>report-aggregate</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report-aggregate</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
